--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
+    "@angular/fire": "^0.0.0",
     "@angular/forms": "^17.0.0",
     "@angular/material": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
@@ -23,9 +24,11 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@auth0/auth0-angular": "^2.2.1",
     "@types/google-one-tap": "^1.2.5",
+    "chart.js": "^4.4.0",
     "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
     "jsonwebtoken": "^9.0.2",
+    "ng2-charts": "^5.0.3",
     "passport-google-oidc": "^0.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
