--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@auth0/auth0-angular": "^2.2.1",
     "@types/google-one-tap": "^1.2.5",
+    "angular-cli-ghpages": "^1.0.7",
     "chart.js": "^4.4.0",
     "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
